src/index.sass
html
  box-sizing: border-box
  
*, *:before, *:after
  box-sizing: inherit

body
  background-color: #0079bf
  overflow: hidden

::-webkit-scrollbar
  width: 8px
  border-radius: 10px
  background: #dadbe2

::-webkit-scrollbar-thumb
  background: #bfc4ce
  border-radius: 10px



h3
  padding: 8px
  font-size: 16px

.nav-div
  margin: 0
  padding: 0
  width: 100%
  .nav-top
    height: 40px
    width: 100%
    background: #0067A3
    color: lightgrey
    text-align: center
    line-height: 40px
    display: flex
    justify-content: center
    align-items: center
    font-weight: bold
    transition: all 0.2s
    cursor: pointer
    &:hover
      color: white
    span
      font-size: 20px
      margin-left: 4px
  .nav-bottom
    height: 40px
    width: 100%
    background: transparent
    


.container
  display: flex
  margin: 0 4px
  overflow-x: auto
  overflow-y: hidden
  max-height: calc( 100vh - 84px)
  &::-webkit-scrollbar
    width: 8px
    height: 12px
    position: relative
    bottom: 10px
    border-radius: 10px
    background: #dadbe271

  &::-webkit-scrollbar-thumb
    background: #bfc4ce
    border-radius: 10px


.list-container
  margin: 8px 4px
  border: 1px solid lightgrey
  border-radius: 3px
  width: 272px
  min-width: 272px
  height: 100%
  display: flex
  flex-direction: column
  background-color: #ebecf0
  max-height: calc(100vh - 110px)
  position: relative

  .title-div
    display: flex
    justify-content: space-between
    align-items: center
    margin: 0 8px

    .title
      width: 100%

    .icon      
      padding: 8px
      font-size: 32px
      border-radius: 3px
      transition: background-color .2s ease
      cursor: pointer
      &:hover
        background: #ced1da
        

  input
    width: 264px
    height: 32px
    font-size: 16px
    margin: 4px auto
    padding: 4px
    &:focus
      outline: none
      border: 2px solid #0079bf
      border-radius: 3px

.card-container
  border: 1px solid lightgrey
  border-radius: 2px
  padding: 8px
  margin: 8px
  transition: background-color .2s ease
  background-color: white
  box-sizing: border-box  
  box-shadow: 0 1px 0 #091e4240
  word-wrap: break-word
  max-width: 100%
  overflow: hidden
  position: relative
  
  .card-label-div
    display: flex
    flex-wrap: wrap
    // span
    //   display: inline-block
    //   font-size: 12px
    //   border-radius: 4px
    //   color: white
    //   font-weight: 700
    //   margin: 0 4px 4px 0
    //   padding: 0 8px
    //   max-width: 210px
    //   text-overflow: ellipsis
    //   overflow: hidden
    //   white-space: nowrap

      



  .card-container-icon
    position: absolute
    top: 6px
    right: 6px
    font-size: 24px
    padding: 4px
    border-radius: 3px
    transition: background-color .2s ease
    cursor: pointer
    z-index: 10
    background: #ebecf0
    &:hover
      background: #ced1da

  &:hover
    background-color: #ebecf0

.card-list
  transition: background-color 0.2s ease
  overflow-y: auto
  min-height: 1px

.add-new-list-btn
  display: flex
  align-items: center
  line-height: 40px
  margin: 8px 4px 
  padding: 0 8px
  width: 270px
  min-width: 270px
  height: 40px
  border-radius: 3px
  background: #52a4d4
  cursor: pointer
  color: white
  transition: background-color .2s ease
  &:hover
    background: #66afd9
.add-new-list-menu
  padding: 4px
  margin: 8px
  width: 270px
  height: 80px
  display: flex
  flex-direction: column
  align-items: flex-start
  background-color: #ebecf0
  border-radius: 3px
  input
    width: 100%
    height: 36px
    font-size: 14px
    &:focus 
      outline: none
      border: 2px solid #0079bf
      border-radius: 3px
  
  .btn-div
    display: flex
    margin-top: 4px
    button
      height: 32px
      padding: 0 8px
      background-color: #0079bf
      color: white
      border: none
      border-radius: 3px
      outline: none      
    .transparent
      background-color: transparent
      color: black

.add-new-card-btn
  display: flex
  align-items: center
  line-height: 32px
  margin: 8px 8px 
  padding: 0 8px
  height: 32px
  border-radius: 3px
  background: inherit
  cursor: pointer
  color: #5e6c84
  transition: background-color .2s ease

  &:hover
    background: #ced1da


.add-new-card-menu
  padding: 4px
  margin: 4px
  width: auto
  height: 100%
  display: flex
  flex-direction: column
  align-items: flex-start
  background-color: #ebecf0
  border-radius: 3px
  textarea
    border: 1px solid lightgrey
    width: 100%
    min-height: 72px
    padding: 8px 8px 0px
    resize: none
    font-size: 14px
    font-family: inherit
    &:focus 
      outline: none
      border: 1px solid lightgrey
      border-radius: 3px
  
  .btn-div
    display: flex
    margin-top: 4px
    button
      height: 32px
      padding: 0 8px
      background-color: #0079bf
      color: white
      border: none
      border-radius: 3px
      outline: none      
    .transparent
      background-color: transparent
      color: black

.list-menu-div
  background: white
  border: 1px solid lightgrey
  border-radius: 3px
  width: 280px
  position: absolute
  top: 44px
  left: 230px
  z-index: 10
  .list-menu-header
    margin: 8px 8px
    display: flex
    justify-content: flex-end
    align-items: center
    border-bottom: 1px solid lightgrey
    .list-menu-icon   
      padding: 4px
      font-size: 32px
      border-radius: 3px
      transition: all .2s ease
      cursor: pointer
      &:hover
        transform: scale(1.1)

    span
      width: 100%
      text-align: center

  .list-menu-main
    display: flex
    flex-direction: column

    span
      padding: 4px 8px
      margin-bottom: 4px
      display: inline-block
      cursor: pointer

      &:hover
        background: #ebecf0

.card-modal-div
  position: fixed
  background: rgba(0, 0, 0, 0.5)
  top: 0
  bottom: 0
  right: 0
  left: 0
  display: flex
  align-items: center
  justify-content: center
  z-index: 5000
  .card-modal-content
    position: relative    
    z-index: 9000
    display: flex
    .left
      display: flex
      flex-direction: column
      textarea
        resize: none
        width: 255px
        height: 72px
        outline: none
        border-radius: 4px
        font-size: 14px
        font-family: inherit
        margin-bottom: 16px
        padding: 8px

        &:focus
          outline: none

      button
        background: #0079bf
        border: none
        width: 80px
        height: 32px
        color: white
        padding: 6px 24px
        transition: all 0.2s
        border-radius: 4px
        &:hover
          // background: #055a8c
          background: #026aa7
        &:active
          background: #055a8c 

    .right
      display: flex
      flex-direction: column
      align-items: flex-start
      margin-left: 8px
      margin-top: 1px
      button
        background: #0009
        color: white
        height: 32px
        border-radius: 4px
        margin-bottom: 4px
        border: none
        transition: all 0.2s
        cursor: pointer

        &:hover
          background: #000
          transform: translateX(8px)
        .side-btn-icon
          vertical-align: middle

.card-modal-menu-div
  background: white
  border: 1px solid lightgrey
  border-radius: 3px
  width: 304px
  position: absolute
  top: 1px
  left: 260px
  z-index: 10
  padding: 12px
  .card-modal-menu-header
    margin-bottom: 12px
    display: flex
    justify-content: flex-end
    align-items: center
    border-bottom: 1px solid lightgrey
    .card-modal-menu-icon   
      padding: 4px
      font-size: 32px
      border-radius: 3px
      transition: all .2s ease
      cursor: pointer
      &:hover
        transform: scale(1.1)

    span
      width: 100%
      text-align: center

  .card-modal-menu-main
    border-bottom: 1px solid lightgrey
    margin-bottom: 24px
    padding: 12px 0
    h6
      margin-bottom: 12px
    input
      width: 100%
      margin: 0
      height: 36px
    
    .size-btn-div
      display: flex
      justify-content: space-between
      .size-btn
        border-radius: 4px
        border: 1px solid lightgrey
        height: 64px
        width: 136px

      .size-btn-sm
        display: flex
        flex-direction: column
        background: white
        .bottom
          padding: 6px 4px 4px 6px
          height: 34px
      .size-btn-full
        position: relative
        .row-div
          position: relative
          bottom: 20px
          left: 6px

      .row-long
        height: 4px
        width: 122px
        margin-right: 4px
        background: lightgrey
        border-radius: 4px
        
      .row-short
        height: 4px
        width: 98px
        background: lightgrey
        border-radius: 4px
        margin-top: 4px
      .row-3
        display: flex
        margin-top: 6px
        justify-content: space-between
        
        .left
          display: flex
          flex-direction: row                           
          div
            height: 6px
            width: 16px
            background: lightgrey
            margin-right: 2px
            border-radius: 4px
        .right
          background: lightgrey
          border-radius: 50%
          height: 10px
          width: 10px
          position: relative
          bottom: 5px


    .color-select-div
      display: flex
      flex-wrap: wrap
      justify-content: center
      margin-bottom: 12px
      
    .card-modal-menu-buttons
      display: flex
      justify-content: space-between
      button
        border: none
        border-radius: 4px
        padding: 6px 12px
        color: white
        width: 70px
      .btn-primary
        background: #0079bf
        &:hover
          background: #026aa7
        &:active
          background: #055a8c
      .btn-danger
        background: #b04632
        &:hover
          background: #933b27
        &:active
          background: #6E2F1A
        
      
    ul
      padding: 0
      list-style: none
      li
        display: flex
        align-items: center
        .edit-button
          padding: 6px
          display: inline-block
          height: 32px
          width: 32px
          border-radius: 4px
          transition: all 0.2s
          text-align: center
          cursor: pointer
          &:hover
            background: #ebecf0
          .label-card-edit-icon
            vertical-align: middle

  .no-border-bottom
    border-bottom: none

  .card-modal-menu-footer
    margin-bottom: 12px
    button
      width: 100%
      height: 32px
      background: #F5F6F8
      border-radius: 4px
      border: none
      display: block
      cursor: pointer
      transition: all 0.2s
      &:hover
        background:#ECEDF0

    

